Styling updates to keep this thing fresh!

--- a/assets/scss/base/_custom.scss
+++ b/assets/scss/base/_custom.scss
@@ -15,7 +15,7 @@ html {
 	box-sizing: border-box;
 }
 body {
-	background-color: #fff;
+	background-color: $body-background;
 	height: 100%;
 	width: 100%;
 	text-rendering: optimizeLegibility;
