--- a/assets/scss/site/_config.scss
+++ b/assets/scss/site/_config.scss
@@ -1,8 +1,8 @@
 // crayola
 $palette: (
-	primary: #8eb8ba,
+	primary: #D0A976,
 	primaryText: #fcf8f4,
-	secondary: #ebc7ba,
+	secondary: #A48EA3,
 	secondaryText: #697280,
 	success: #4caf50,
 	error: #f44336,
@@ -13,8 +13,8 @@ $palette: (
 
 // global
 $body-font-size: rem-calc(13);
-$body-background: #ffffff;
-$body-font-color: #53596C;
+$body-background: #f8f8f8;
+$body-font-color: #666666;
 $global-width: 1000px;
 
 // Loaded from Google Fonts in the header
