Removing unused junk

--- a/assets/scss/site/_config.scss
+++ b/assets/scss/site/_config.scss
@@ -1,9 +1,9 @@
 // crayola
 $palette: (
 	primary: #D0A976,
-	primaryText: #fcf8f4,
+	primaryText: #ffffff,
 	secondary: #A48EA3,
-	secondaryText: #697280,
+	secondaryText: #ffffff,
 	success: #4caf50,
 	error: #f44336,
 	alert: #ff9800,
