--- a/assets/scss/site/_header.scss
+++ b/assets/scss/site/_header.scss
@@ -1,6 +1,6 @@
 // Header specific styles here
-nav:not(.main-menu) {
-	ul:not(.drawerMenu) {
+nav{
+	ul {
 		margin: 0;
 		display: flex;
 		align-items: stretch;
@@ -15,19 +15,19 @@ nav:not(.main-menu) {
 			flex: 0 1 auto;
 			list-style-type: none;
 			display: inline-flex;
-			a {
+			a:not(.button) {
 				text-transform: uppercase;
                 font-size: rem-calc(12);
-				color: $body-font-color;
+				color: $secondary;
 				&:hover,
 				&:focus,
 				&:active {
-					color: $primary;
+					color: $secondary;
 					&:after {
 						@include pseudo();
 						position: absolute;
 						bottom: -$small-space;
-						border-bottom: 2px solid $secondary;
+						border-bottom: 2px solid $body-font-color;
 						width: 100%;
 						height: 2px;
 					}
@@ -35,22 +35,4 @@ nav:not(.main-menu) {
 			}
 		}
 	}
-}
-
-
-a.menu-close,
-a.menu-toggle {
-	z-index: 101;
-}
-
-a.menu-toggle {
-	top: 80px;
-}
-a.menu-close {
-	top: 10px;
-}
-
-.main-menu {
-	top: 69px;
-	background-color: #ffffff;
 }
