--- a/assets/scss/base/index.scss
+++ b/assets/scss/base/index.scss
@@ -4,6 +4,7 @@
 @import 'alignment';
 @import 'custom';
 @import 'buttons';
+@import 'badges';
 @import 'forms-elements';
 @import 'helpers';
 @import 'table';
