--- a/assets/scss/site/_config.scss
+++ b/assets/scss/site/_config.scss
@@ -8,7 +8,8 @@ $palette: (
 	error: #f44336,
 	alert: #ff9800,
 	warning: #00bcd4,
-	light-grey: #c4c5c5
+	light-grey: #c4c5c5,
+	dark-grey: #222222
 );
 
 // global
