--- a/assets/scss/site/_layout.scss
+++ b/assets/scss/site/_layout.scss
@@ -133,6 +133,11 @@ input {
 		margin-bottom: $large-space;
 	}
 }
+.badgeHolder {
+	.badge {
+		margin-bottom: $small-space;
+	}
+}
 footer {
 	margin-top: $large-space;
 }
