--- a/assets/scss/base/_forms-elements.scss
+++ b/assets/scss/base/_forms-elements.scss
@@ -70,6 +70,7 @@ textarea {
 	box-shadow: none;
 	padding: $small-space ($small-space * 2);
     font-size: $body-font-size;
+	width: 100%;
 }
 label {
 	color: $body-font-color;
@@ -80,9 +81,24 @@ label {
 	opacity: 0.6;
 }
 select {
-	min-height: $input-height;
 	color: $light;
-	font-size: rem-calc(14);
+	width: 100%;
+	height: $input-height;
+	border: 1px solid $light;
+	margin: 0 0 1.14286rem;
+	font-size: rem-calc(12);
+	font-family: inherit;
+	line-height: normal;
+	color: $body-font-color;
+	background-color: #ffffff;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="32" height="24" viewBox="0 0 32 24"><polygon points="0,0 32,0 16,24" style="fill: rgb%2834, 34, 34%29"></polygon></svg>');
+	background-size: 9px 6px;
+	background-position: right center;
+	background-origin: content-box;
+	background-repeat: no-repeat;
+	padding-right: ($small-space * 3);
 }
 fieldset {
     margin-bottom: $medium-space;
@@ -104,26 +120,165 @@ legend {
 // styling inputs further
 // if you want an icon on your select initially, you're covered
 .select-wrapper {
-	width: 100%;
-	max-width: 300px;
 	&:before {
-		content: '\f041'; // default
 		font-size: rem-calc(16);
 		font-family: 'FontAwesome';
 		position: absolute;
-		left: 12px;
-		top: 7px;
-		color: #222222;
+		left: ($small-space * 3);
+		top: 11px;
+		color: $primary;
 		z-index: 10;
+	}
+	// set a class name, with a matching icon (Font Awesome)
+	&.location:before {
+		content: '\f041';
 	}
 	// pad out the select so the icon has room
 	select {
-		padding-left: ($large-space - $small-space);
-		padding-right: ($xlarge-space / 2);
-		background-position: right -($small-space * 3) center;
-		background-repeat: no-repeat;
-		background-size: auto 90%;
-		background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20256%20448%22%20enable-background%3D%22new%200%200%20256%20448%22%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E.arrow%7Bfill%3A%23#{$primary}%3B%7D%3C%2Fstyle%3E%3Cpath%20class%3D%22arrow%22%20d%3D%22M255.9%20168c0-4.2-1.6-7.9-4.8-11.2-3.2-3.2-6.9-4.8-11.2-4.8H16c-4.2%200-7.9%201.6-11.2%204.8S0%20163.8%200%20168c0%204.4%201.6%208.2%204.8%2011.4l112%20112c3.1%203.1%206.8%204.6%2011.2%204.6%204.4%200%208.2-1.5%2011.4-4.6l112-112c3-3.2%204.5-7%204.5-11.4z%22%2F%3E%3C%2Fsvg%3E%0A);
+		padding-left: ($small-space * 7);
+		width: 100%;
+	}
+}
+//checkbox & radio
+.control {
+	display: inline-block;
+	position: relative;
+	padding-left: ($large-space - $small-space);
+	margin-bottom: ($small-space * 3);
+	cursor: pointer;
+	font-size: rem-calc(12);
+	padding-top: 3px;
+	width: $medium-space;
+	height: $medium-space;
+	input {
+		position: absolute;
+		z-index: -1;
+		left: 0;
+		opacity: 0;
+		margin-bottom: 0;
+		&:disabled ~ .checky:after {
+			border-color: $light;
+		}
+	}
+	// for radio buttons
+	&.radio {
+		.checky {
+			border-radius: 50%;
+			&:after {
+				left: $small-space;
+				top: $small-space;
+				width: 6px;
+				height: 6px;
+				border-radius: 50%;
+				background: #ffffff;
+			}
+		}
+	}
+	.checky {
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: $medium-space;
+		width: $medium-space;
+		background: #ffffff;
+		border: 1px solid $light;
+		&:after {
+			content: '';
+			position: absolute;
+			display: none;
+			left: 6px;
+			top: 2px;
+			width: $small-space;
+			height: ($small-space * 2);
+			border: solid #fff;
+			border-width: 0 2px 2px 0;
+			transform: rotate(45deg);
+		}
+	}
+	&:hover input ~ .checky {
+		background: rgba($primary, 0.3);
+	}
+	input {
+		&:focus ~ .checky {
+			background: #ffffff;
+		}
+		&:checked ~ .checky {
+			background: $primary;
+			border: 1px solid $primary;
+			&:after {
+				display: block;
+			}
+		}
+	}
+	&:hover input:not([disabled]):checked ~ .checky {
+		background: darken($primary, 10%);
+	}
+	input {
+		&:checked:focus ~ .checky {
+			background: $primary;
+		}
+		&:disabled ~ .checky {
+			background: #e6e6e6;
+			opacity: 0.6;
+			pointer-events: none;
+		}
+	}
+}
+// toggle switch
+.checkSwitch {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	transition: .4s all;
+	margin: 0 ($small-space * 3) 0 0;
+	border-radius: ($small-space * 10);
+	background: lighten($light, 15%);
+	width: ($small-space * 7);
+	height: ($small-space * 3);
+	outline: 0;
+	cursor: pointer;
+	position: relative;
+	user-select: none;
+	display: inline-block;
+	top: $small-space;
+}
+/* switch background */
+.checkSwitchInput {
+	position: absolute;
+	width: 0;
+	height: 0;
+	margin: 0;
+	padding: 0;
+	opacity: 0;
+	appearance: none;
+	border: none;
+	&:checked ~ .checkSwitch {
+		background: $primary;
+		transition: .25s all;
+		&.dark {
+			background: darken($primary, 10%);
+		}
+		&::before {
+			transform: translate(18px, 0);
+			background: darken($primary, 10%);
+		}
+		&.dark::before {
+			background: lighten($primary, 10%);
+		}
+	}
+	~ .checkSwitch::before {
+		content: '';
+		transition: .26s all;
+		position: absolute;
+		left: 0px;
+		top: -3px;
+		bottom: 2px;
+		right: auto;
+		transform: translate(0, 0);
+		display: block;
+		width: $medium-space;
+		height: $medium-space;
+		border-radius: $large-space;
+		background: lighten($primary, 15%);
 	}
 }
 // file upload
